<resources>
    <string-array name="supported_languages">
        <item>en</item>
        <item>nl</item>
        <item>fr</item>
    </string-array>
    <string name="app_name">I-TalentApp</string>
    <string name="choose_language">choose a language</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_item_detail_host" translatable="false">ItemDetailHostActivity</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="changed_language">you changed language to english</string>
    <string name="language_selection">Language Selection</string>
    <string name="nightmode">NightMode</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="scan_qr_code" translatable="false">Scan QR-Code</string>
    <string name="scan_result_title" translatable="false">scan QR Code</string>scan_result_title
    <string name="positive_button" translatable="false">Confirm</string>
    <string name="choose_language_button">choose</string>
    <string name="activityTitle" >"Activity title"</string>
    <string name="about_me">about me</string>
    <string name="username">user name</string>
    <string name="useremail">user email</string>
    <string name="activitytitle">activity title</string>
    <string name="activitylocation">activity Location</string>
    <string name="activitydate">activity Date</string>
    <string name="acitvityduration">acitvity Duration</string>
    <string name="activitydomain">Activity Domain</string>
    <string name="activitydescription">Activity Description</string>
    <string name="intro">
        I am a student in the third year of applied computer science, majoring in AI and robotics. At school, I am mainly interested in machine learning and specifically computer vision. Outside of school, I\'m interested in gaming, sports (rugby, cycling) and movies.
        \n\n I am someone who is very goal-oriented. I like to finish a task quickly and then move on to the next task. That way, a project keeps moving forward and doesn\'t stall on the spot. My big pitfall is laziness in my work. Because I want to work in a goal-oriented way, I often have the tendency to carry out tasks as requested and not to do anything extra. Doing more than asked is therefore a challenge for me. My biggest allergy is people who are too perfectionist, I want to move on with the project, on to the next ticket. While some people are still giving buttons another shade of green for the fifteenth time.
        \n\n In social interaction I am rather introverted, I am often aloof and subdued with people I don\'t know very well. Working with new people is not my strong suit. I often approach new people with a critical eye. I am also someone who likes to have a well-defined task or goal, so that I can occupy myself with how something can be achieved in practice without first having to determine concepts or designs. Once I know my team a little, I am someone who often takes on a guiding role. I know where I want to go, what the end goal is and I try to steer and motivate my team in that direction. If someone else takes on this task and performs it well, then I will certainly not take on this role. Once I feel comfortable in a group, I will always give my opinion if I think it adds value. On the other hand, I have no problem working individually on a project.
        \n\n I am a person with few ambitions, I live very hard from week to week and therefore I have few long-term ambitions. In a few years\' time, I would, of course, like to have a nice permanent job with a good company. But saying that I have a specific job or goal in mind is not in my nature. With that said, I always have to say that nobody knows what the future holds.
        \n\n One thing I want to keep improving is my relationship with new people, over the years this has gotten a lot better, but there is still a lot of room for improvement.
    </string>
    <string name="reflection">
        Throughout my studies at PXL I have grown as a person in several areas. For example, thanks to the many group works with people I did not know before, I have become much better at working with new people. I have also often taken on a guiding role here, because otherwise the group work would probably not have come to a successful conclusion. So I think I have grown enormously in the area of \'empathy\'. I am still an introvert, but in the work context I have certainly come out of my shell.
        \n\n Throughout the training, I have also learned to take initiative and to fill in the gaps in a task rather than waiting for an answer. It is better to show a solution and ask for confirmation than to wait for days for an e-mail clarifying what is expected.
        \n\n During my internship, the multidisciplinary nature of our training also came in handy. During the Easter holidays, me and another PXL student were the only trainees in our 6-member team. Suddenly we were ai-engineer, front-end developer and project-leader at the same time. Despite all the different hats we had to wear during this period, everything went smoothly during these two weeks of Easter holidays.
        \n\n I have also grown in other areas during the course. I suffer a lot from procrastination, which used to be so bad that I just (didn\'t) make the deadlines. I\'m not going to pretend that I don\'t procrastinate anymore, but it\'s a lot better than it used to be. This can also be seen in my scores throughout the programme. In the first year I had a few resits, from the second year on I have had no more resits (for the time being).
        \n\n In any case, I will be attending more subject-related seminars and hackathons in the future. I have learned a lot from seminars, even if it is often only superficial knowledge. It is an enormous added value if you come back into contact with this subject later. Hackatons are also just great for learning to think in terms of problem solving and time constraints. Also, you are often thrown into a bath of new technology, something I would otherwise never do on my own.
        \n\n Talking about my learning trajectory, the COVID-19 pandemic can\'t be missed of course. I am probably in the minority when I say that I did not mind the whole online class thing, or often even found it an added value. Only in the IT project did I find that working online was often difficult, online stand-ups and retrospectives are difficult when working only 2 days a week. The possibility of reviewing the lessons afterwards at my own pace was a godsend for me. During my internship, I was glad that I could physically go to the office every day, simply because it made asking for help a lot easier than talking to someone online via Slack.
        \n\n In retrospect, I am also very glad that I chose to graduate in AI and Robotics. When I had to make my choice, I was in extreme doubt between AnR and full-stack development. A year and a half later, I can say with certainty that AI and Robotics was the right choice of the two. Machine learning and more specifically computer vision is a field in which I would like to continue for years to come. If I hadn\'t been wandering around in higher education for a couple of years before ending up at the pxl, I would have considered getting another master\'s degree in computer science. But now I think it\'s time to enter the work field with my diploma in my pocket.
    </string>


</resources>