<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsMenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LanguageSelectionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/language_selection_margin"
                android:text="@string/language_selection"
                app:layout_constraintEnd_toStartOf="@+id/languageSelection"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/languageSelection" />

            <TextView
                android:id="@+id/NightModeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/nightmode"
                app:layout_constraintStart_toStartOf="@+id/LanguageSelectionTextView"
                app:layout_constraintTop_toTopOf="@+id/NightModeSwitch" />

            <Button
                android:id="@+id/languageSelection"
                android:layout_width="@dimen/narrow_button"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/choose_language_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/LanguageSelectionTextView"
                app:layout_constraintTop_toBottomOf="@+id/NightModeSwitch"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/NightModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                app:layout_constraintStart_toStartOf="@+id/languageSelection"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>